rremoved dropdown menu from products

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,39 +12,22 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li>
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product2">
                 Product2
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Category 1</a>
-                <a href="" class="dropdown-item">Category 2</a>
-                <a href="" class="dropdown-item">Category 3</a>
-                <a href="" class="dropdown-item">Category 4</a>
-            </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li>
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product3">
                 Product3
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Category 1</a>
-                <a href="" class="dropdown-item">Category 2</a>
-                <a href="" class="dropdown-item">Category 3</a>
-            </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="Product4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li>
+            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="Product4">
                 Product4
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">Category 1</a>
-                <a href="" class="dropdown-item">Category 2</a>
-                <a href="" class="dropdown-item">Category 3</a>
-                <a href="" class="dropdown-item">Category 4</a>
-            </div>
         </li>
     </ul>
 </div>
