categories buttons added - products app created

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,33 +1,35 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
+    <ul class="navbar-nav w-auto mx-auto category-nav">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Product1
+            <a class="logo-font nav-link text-black m-1" href="#" id="Product1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button>Product 0</button>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-                <a href="" class="dropdown-item ">By Category</a>
+                <a href="" class="dropdown-item">By Rating</a>
+                <a href="" class="dropdown-item">By Category</a>
                 <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
-
-        <li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product2">
-                Product2
-            </a>
+        <li class="nav-item px-4" id="#">
+            <a class="logo-font nav-link text-black m-1" href="#">
+                <button>Product 1</button>
+            </a>  
         </li>
-
-        <li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Product3">
-                Product3
-            </a>
+        <li class="nav-item px-4" id="#">
+            <a class="logo-font nav-link text-black m-1" href="#">
+                <button>Product 2</button>
+            </a>  
         </li>
-
-        <li>
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="Product4">
-                Product4
-            </a>
+        <li class="nav-item px-4" id="#">
+            <a class="logo-font nav-link text-black m-1" href="#">
+                <button>Product 3</button>
+            </a>  
+        </li>
+        <li class="nav-item px-4" id="#">
+            <a class="logo-font nav-link text-black m-1" href="#">
+                <button>Product 4</button>
+            </a>  
         </li>
     </ul>
 </div>
