--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #71d699;
+    background-color: #ffffff;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -151,71 +151,24 @@ a.category-badge > span.badge:hover {
     overflow-y: auto;
 }
 
-/*----------------------------------*/
-
-*, *:after, *:before {
-	box-sizing: border-box;
+/*----------buttons categories -----------*/ 
+button {
+    transition: all .5s ease;
+    color: rgb(0, 0, 0);
+    border: 3px solid rgb(0, 0, 0);
+    font-family:'Montserrat', sans-serif;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color : transparent;
+    padding: 10px;
+    outline: none;
+    border-radius: 4px;
 }
-
-// Codepen spesific styling - only to center the elements in the pen preview and viewport 
-.container {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 1rem;
+button:hover {
+    color: #001F3F;
+    background-color: rgb(136, 127, 127);
 }
-// End Codepen spesific styling
-
-.post {
-	display: flex;
-	text-decoration: none;
-	color: inherit;
-	max-width: 400px;
-	position: relative;
-	padding: 2rem;
-	box-shadow: inset 0 0 0 4px #000, inset -4px -4px 0 6px #CCC;
-	background-color: #FFF;
-	cursor: pointer; 
-	&:before {
-		position: absolute; 
-		left: 0;
-		bottom: 0;
-		content: "";
-		display: block;
-		width: 100%;
-		height: 100%;
-		background-color: #000;
-		transform-origin: 0 bottom 0;
-		transform: scaleY(0);
-		transition: .4s ease-out;
-	}
-	
-	&:hover {
-		.post-title {
-			color: #FFF;
-		}
-		&:before {
-			transform: scaleY(1);
-		}
-	}
-}
-
-.post-title {
-	position: relative;
-	font-size: 2rem;
-	font-weight: 700;
-	line-height: 1.333;
-	transition: .4s ease-out;
-}
-
-
-
 
 /* -------------------------------- Media Queries */
 
