--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav w-auto mx-auto category-nav">
         <li class="nav-item dropdown">
             <a class="logo-font nav-link text-black m-1" href="#" id="Product1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <button>Product 0</button>
+                <button>All Products</button>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
@@ -13,22 +13,22 @@
         </li>
         <li class="nav-item px-4" id="#">
             <a class="logo-font nav-link text-black m-1" href="#">
-                <button>Product 1</button>
+                <button>Towels</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
             <a class="logo-font nav-link text-black m-1" href="#">
-                <button>Product 2</button>
+                <button>Robes</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
             <a class="logo-font nav-link text-black m-1" href="#">
-                <button>Product 3</button>
+                <button>Bibs</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
             <a class="logo-font nav-link text-black m-1" href="#">
-                <button>Product 4</button>
+                <button>Embroidery</button>
             </a>  
         </li>
     </ul>
