--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,7 +18,7 @@
         </li>
         <li class="nav-item px-4" id="#">
             <a class="logo-font nav-link text-black m-1" href="#">
-                <button>Robes</button>
+                <button>Clothes</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
