--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,14 +1,14 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto category-nav">
         <li class="nav-item dropdown">
-            <a class="logo-font nav-link text-black m-1" href="#" id="Product1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black m-1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <button>All Products</button>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item">By Rating</a>
                 <a href="" class="dropdown-item">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
         <li class="nav-item px-4" id="#">
