added filtering by type of item

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,22 +12,22 @@
             </div>
         </li>
         <li class="nav-item px-4" id="#">
-            <a class="logo-font nav-link text-black m-1" href="#">
+            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=towels">
                 <button>Towels</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
-            <a class="logo-font nav-link text-black m-1" href="#">
+            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=clothes">
                 <button>Clothes</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
-            <a class="logo-font nav-link text-black m-1" href="#">
+            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=bibs">
                 <button>Bibs</button>
             </a>  
         </li>
         <li class="nav-item px-4" id="#">
-            <a class="logo-font nav-link text-black m-1" href="#">
+            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=embroidery">
                 <button>Embroidery</button>
             </a>  
         </li>
