--- a/static/css/base.css
+++ b/static/css/base.css
@@ -63,13 +63,12 @@ body {
 	z-index: -1;
 }
 
-.btt-button {
-    height: 42px;
-    width: 42px;
+#btn-back-to-top {
     position: fixed;
-    bottom: 10px;
-    right: 10px;
-}
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
 
 .btt-link,
 .update-link,
@@ -210,4 +209,11 @@ button:hover {
     body {
         height: calc(100vh - 116px);
     }
+}
+
+/* Smooth scrolling IF user doesn't have a preference due to motion sensitivities */
+@media screen and (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
 }
