--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -108,6 +108,36 @@
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
+    // sorting products 
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>    
+
+    <script type="text/javascript">
 		//Get the button
 let mybutton = document.getElementById("btn-back-to-top");
 
