--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -57,6 +57,7 @@
                             <tr>
                                 <td colspan="5" class="pt-5 text-right">
                                     <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
+                                    <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
                                 </td>
                             </tr>
                             <tr>
