--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -46,11 +46,10 @@
                                         {% endif %}
                                     </td>
                                     <td class="py-3">
-                                        {% if item.product.image %}
-                                        <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                                        {% else %}
-                                        <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                        {% endif %}
+                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
