--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,4 +10,31 @@
 {% endblock %}
 
 {% block content %}
+
+
+<footer id="footer" class="py-3 text-green">
+	<div class="container-fluid" id="color">
+		<div class="row text-center">
+			<div class="col-md-4">
+				<i class="fas fa-book-reader fa-4x mr-4"></i>
+				<h5>Handmade and original designs</h5>
+				<p>Os, when an unknown printer took a galley of type and scrambled it to 
+					make a type specimen book. It has survived not only five centuries, but 
+					also the leap into electronic typesetting, remaining essentially unc</p>
+			</div>
+			<div class="col-md-4">
+				<i class="fas fa-spa fa-4x mr-4"></i>
+				<h5>Expert Craftmenship</h5>
+				<p> Ipsum generators on the Internet tend to repeat 
+					predefined chunks as necessary, making this the first true generator on the.</p>
+			</div>
+			<div class="col-md-4">
+				<i class="fas fa-graduation-cap fa-4x mr-4"></i>
+				<h5>New designs every week</h5>
+				<p> years old. Richard McClintock, a Latin professor at Hampden-Sydney
+					 College in Virginia, looked up one of.</p>
+			</div>
+		</div>
+	</div>
+</footer>
 {% endblock %}
