--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,24 +15,19 @@
 <footer id="footer" class="py-3 text-green">
 	<div class="container-fluid" id="color">
 		<div class="row text-center">
-			<div class="col-md-4">
-				<i class="fas fa-book-reader fa-4x mr-4"></i>
+			<div class="col-md-6">
+				<i class="fas fa-book-reader fa-2x mr-4"></i>
 				<h5>Handmade and original designs</h5>
-				<p>Os, when an unknown printer took a galley of type and scrambled it to 
-					make a type specimen book. It has survived not only five centuries, but 
-					also the leap into electronic typesetting, remaining essentially unc</p>
+				<p>Embroidered designs on clothing ready to wear,<br> creative artistic
+					and original work, fashionable designs 
+				</p>
 			</div>
-			<div class="col-md-4">
-				<i class="fas fa-spa fa-4x mr-4"></i>
-				<h5>Expert Craftmenship</h5>
-				<p> Ipsum generators on the Internet tend to repeat 
-					predefined chunks as necessary, making this the first true generator on the.</p>
-			</div>
-			<div class="col-md-4">
-				<i class="fas fa-graduation-cap fa-4x mr-4"></i>
-				<h5>New designs every week</h5>
-				<p> years old. Richard McClintock, a Latin professor at Hampden-Sydney
-					 College in Virginia, looked up one of.</p>
+			<div class="col-md-6">
+				<i class="fas fa-spa fa-2x mr-4"></i>
+				<h5>About me</h5>
+				<p> "I am an embroiderer with more than 20 years of experiencie,
+					I create and embroid <br> original designs on clothing br for people to wear and also art to decorate"
+				</p>
 			</div>
 		</div>
 	</div>
