css python and html refactoring

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,8 +25,8 @@
 			<div class="col-md-6">
 				<i class="fas fa-spa fa-2x mr-4"></i>
 				<h5>About me</h5>
-				<p> "I am an embroiderer with more than 20 years of experiencie,
-					I create and embroid <br> original designs on clothing br for people to wear and also art to decorate"
+				<p> "I am an embroiderer with more than 20 years of experiencie,I create and <br>
+					embroid  original designs on clothing br for br people to wear and also art to decorate"
 				</p>
 			</div>
 		</div>
