--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -15,24 +15,24 @@
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
-        <li class="nav-item px-4" id="#">
+        <li class="nav-item px-4">
             <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=towels">
-                <button>Towels</button>
+                Towels
             </a>  
         </li>
-        <li class="nav-item px-4" id="#">
+        <li class="nav-item px-4">
             <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=clothes">
-                <button>Clothes</button>
+                Clothes
             </a>  
         </li>
-        <li class="nav-item px-4" id="#">
+        <li class="nav-item px-4">
             <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=Masks">
-                <button>Masks</button>
+                Masks
             </a>  
         </li>
-        <li class="nav-item px-4" id="#">
+        <li class="nav-item px-4">
             <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=embroidery">
-                <button>Artistic Designs</button>
+                Artistic Designs
             </a>  
         </li>
     </ul>
