--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -121,7 +121,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     // sorting products 
 		$('.btt-link').click(function(e) {
 			window.scrollTo(0,0)
@@ -130,7 +130,7 @@
 {% include 'products/includes/quantity_input_script.html' %}
 
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
