--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
     </script>
     {% endblock %}
