--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,27 +9,54 @@
     </div>
 {% endblock %}
 
+
 {% block content %}
 
 
-<footer id="footer" class="py-3 text-green">
-	<div class="container-fluid" id="color">
-		<div class="row text-center">
-			<div class="col-md-6">
-				<i class="fas fa-book-reader fa-2x mr-4"></i>
-				<h5>Handmade and original designs</h5>
-				<p>Embroidered designs on clothing ready to wear,<br> creative artistic
-					and original work, fashionable designs 
-				</p>
-			</div>
-			<div class="col-md-6">
-				<i class="fas fa-spa fa-2x mr-4"></i>
-				<h5>About me</h5>
-				<p> "I am an embroiderer with more than 20 years of experiencie,I create and <br>
-					embroid  original designs on clothing br for br people to wear and also art to decorate"
-				</p>
-			</div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+	<ol class="carousel-indicators">
+	  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+	  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+	  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+	</ol>
+	<div class="carousel-inner">
+	  <div class="carousel-item active">
+		<img class="d-block w-100" src="static/media/slider1.jpg" alt="First slide">
+	  </div>
+	  <div class="carousel-item">
+		<img class="d-block w-100" src="static/media/slider4.jpg" alt="Second slide">
+	  </div>
+	  <div class="carousel-item">
+		<img class="d-block w-100" src="static/media/slider3.jpg" alt="Third slide">
+	  </div>
+	</div>
+	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Next</span>
+	</a>
+  </div>
+
+  <div class="container-fluid">
+	<div class="row text-center">
+
+		<div class="col-md">
+			<i class="fas fa-spa fa-2x"></i>
+			<h5>About me</h5>
+			<p> "I am an embroiderer with more than 20 years of experiencie,I create and <br>
+				embroid  original designs on clothing for people to wear and also art to decorate"
+			</p>
 		</div>
 	</div>
-</footer>
+</div>
+
+<div class="footer-basic">
+        <footer>
+            <div class="social"><a href="https://www.instagram.com/"><i class="icon ion-social-instagram"></i></a><a href="https://ar.pinterest.com/"><i class="icon ion-social-pinterest"></i></a><a href="https://twitter.com/?lang=en"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/"><i class="icon ion-social-facebook"></i></a></div>
+            <p class="copyright">Broder © 2018</p>
+        </footer>
+    </div>
 {% endblock %}
