Footer added to all tabs - contact info, about me and social links displayed in 3 columns

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -262,6 +262,9 @@ input[name='q']::placeholder {
 
 
 /*----------Footer-----------*/ 
+.footer-row{
+    margin-top: 40px;
+}
 
 .text-center{
     margin-top: 14px;
