--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,7 +31,7 @@
             </a>  
         </li>
         <li class="nav-item px-4">
-            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?category=embroidery">
+            <a class="logo-font nav-link text-black m-1" href="{% url 'products' %}?artistic designs=">
                 Artistic Designs
             </a>  
         </li>
