--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <div id="topnav" class="row bg-grey pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0">Broder</h2>
+                    <img src="static/media/logo6.png" height="70" width="210">
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
