--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,13 +21,13 @@
 	</ol>
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
-		<img class="d-block w-100" src="static/media/slider1.jpg" alt="First slide">
+		<img class="d-block w-100" src="https://ms4-broder.s3.eu-west-1.amazonaws.com/static/media/slider1.jpg" alt="First slide">
 	  </div>
 	  <div class="carousel-item">
-		<img class="d-block w-100" src="static/media/slider4.jpg" alt="Second slide">
+		<img class="d-block w-100" src="https://ms4-broder.s3.eu-west-1.amazonaws.com/static/media/slider4.jpg" alt="Second slide">
 	  </div>
 	  <div class="carousel-item">
-		<img class="d-block w-100" src="static/media/slider3.jpg" alt="Third slide">
+		<img class="d-block w-100" src="https://ms4-broder.s3.eu-west-1.amazonaws.com/static/media/slider3.jpg" alt="Third slide">
 	  </div>
 	</div>
 	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
