--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -87,6 +87,39 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
+                    <div class="col-md-6">
+                        <h3 class="my-3">Reviews - <span class="avg-rating"></span>/5 <i class="fa fa-star text-warning"></i>
+                            {% if user.is_authenticated %}
+                            <button data-toggle="modal" data-target="#productReview" type="button" class="btn btn-warning btn-sm float-right reviewBtn">Add Review</button>
+                            {% endif %}</h3>
+                            <!-- Product review -->
+                            {% if user.is_authenticated %}
+                            <div class="modal fade" id="productReview" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Add Product Review</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <table class="table table-bordered">
+                                                {{form.as_table}}
+                                                <tr>
+                                                    <td colspan="2">
+                                                   <button type="submit" class="btn btn-primary">Submit</button>
+                                                </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                                  <!-- Product review end-->
+                        </h3>
                 </div>
             </div>
         </div>
