--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <div id="topnav" class="row bg-grey pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img src="https://ms4-broder.s3.eu-west-1.amazonaws.com/static/media/logo6.png" height="70" width="210">
+                    <img src="https://ms4-broder.s3.eu-west-1.amazonaws.com/static/media/logo6.png" height="70" width="210" alt="#">
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -172,6 +172,7 @@
                     </div>
             </div>
 
+        </div>
         </div>
     </footer>
 
