--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,3 +382,7 @@ input[name='q']::placeholder {
     scroll-behavior: smooth;
   }
 }
+
+.modal-body form textarea{
+    width: 100% !important;
+}
